[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radogast"
version = "0.1.0"
description = "Universal context drift monitor for AI agent sessions"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mcp>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.2.2", "torch>=2.0"]

[project.scripts]
radogast     = "radogast.cli:main"
radogast-mcp = "radogast.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["radogast*"]
