[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radogast"
version = "0.1.1"
description = "Universal context drift monitor for AI agent sessions"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "click>=8.0",
    "mcp>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rouge-score>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/szholobetsky/radogast"
Repository = "https://github.com/szholobetsky/radogast"

[project.optional-dependencies]
embed = ["sentence-transformers>=2.2.2", "torch>=2.0"]

[project.scripts]
radogast     = "radogast.cli:main"
radogast-mcp = "radogast.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["radogast*"]
